fixing card footer collapse toggle flicker

--- a/src/css/bustime.sass
+++ b/src/css/bustime.sass
@@ -1122,7 +1122,8 @@ button, .button
     >.collapse-content
       max-height: none
     .card-footer
-      display: none
+      opacity: 0
+      max-height: 0
   &:not(.service-alert)
     &.open
       >.card-header
@@ -1332,6 +1333,8 @@ button, .button
     background-color: $ui-gray
     padding: $content-padding/2
     font-size: .75em
+    max-height: 100vh
+    transition: max-height .5s ease-in-out, opacity .25s ease-in-out
     .stop-routes
       margin: 0
       padding: 0
